--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,6 @@ header {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  padding: 4px 24px;
   align-items: center;
 
   /* background-color: var(--color-bright); */
@@ -25,22 +24,23 @@ header {
   display: flex;
   justify-content: start;
   align-items: end;
-
-  gap: 8rem;
 }
 
 #navbar-menu img {
-  padding-bottom: 2.5px;
+  height: 38px;
+  padding-bottom: 0.25rem;
   filter: brightness(0) invert(1);
 }
 
 #navbar-items {
   display: flex;
-  gap: 32px;
+  justify-content: center;
+  gap: 3.2rem;
+  margin: 0 auto;
 }
 
 #navbar-items a {
-  font-weight: bold;
+  font-weight: 500;
   text-transform: uppercase;
   text-align: center;
   padding-bottom: 0;
@@ -48,82 +48,90 @@ header {
   color: var(--color-bright);
 }
 
-/* Nav icon */
-.nav-icon li {
-  display: contents;
+#navbar-personal {
+  display: flex;
+  justify-content: end;
+  gap: 4px;
 }
 
-.nav-icon li i {
-  font-size: 2.4rem;
+#navbar-personal li {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#navbar-personal li i {
+  font-size: 24px;
   text-align: center;
-  width: 3rem;
-  margin: 0 0.4rem;
 }
 
-/* Section title */
-.section-title p {
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-/* Section image */
-.section-img {
-  border-radius: 2rem;
-}
-
-/* Each Section */
+/* Cover */
 #cover {
   display: flex;
-  flex-direction: row;
 }
 
-@media (min-width: 900px) {
-  #cover {
-    min-height: 900px;
-    height: 100dvh;
-  }
-}
-
+/* Highlight */
 #highlight {
   padding: 0;
   background-image: linear-gradient(
-      to right bottom,
+      to left top,
       var(--color-background-filter),
-      #00000066
+      #121212b9
     ),
     url("../../data/insights/thumbnail/test.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-clip: content-box;
-}
 
-#editorspick {
-  padding: 96px 32px 32px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  justify-content: flex-end;
+}
+
+#highlight h1,
+#highlight p {
+  color: var(--color-bright);
+}
+
+#highlight .topic {
+  outline-color: var(--color-bright);
+}
+
+#highlight .section-container {
+  padding: 6.4rem 3.2rem;
+}
+
+/* Editor's Pick */
+#editorspick {
+  padding: 6.4rem 3.2rem 3.2rem 3.2rem;
   background-color: var(--color-background);
 }
 
-#editorspick img {
-  height: auto;
+#editorspick-primary {
+  border-bottom: solid 1px #000;
+  padding-bottom: 3.2rem;
+  margin-bottom: 3.2rem;
 }
 
-#editorspick > ul {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+#editorspick-primary .section-img {
+  height: 28.3dvh;
 }
 
-/* Topic */
-.topic {
-  display: inline-block;
-  text-transform: uppercase;
-  padding: 4px 16px;
-  border-radius: 2rem;
-  outline: 2px solid #000;
+#editorspick-primary .section-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
-.viewall {
+#editorspick-secondary-list {
+  list-style: disc;
+  margin-left: 1.6rem;
+}
+
+#editorspick-secondary-list li::marker {
+  font-size: initial;
 }
