--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -8,6 +8,7 @@ Author: Hyunjung Joun
   /* Colors */
   --color-primary: #00ff00;
   --color-bright: #f9f6f2;
+  --color-dark: #1f1910;
   --color-background: #e9be7a;
   --color-background-filter: #6a49139c;
 
