made component bookmark-add

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,5 +1,5 @@
 /* --------------------------------
-- Purpose: to reset default styles
+- Purpose: to reset a client's default style
 -------------------------------- */
 
 /* --------------------------------
