--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -17,6 +17,8 @@
 }
 
 #navbar-menu {
+  width: 66.66666%;
+
   display: flex;
   justify-content: start;
   align-items: end;
@@ -46,6 +48,8 @@
 }
 
 #navbar-personals {
+  width: 33.33333%;
+
   display: flex;
   justify-content: end;
   gap: 0.4rem;
@@ -71,6 +75,7 @@
 
 /* Highlight ----------------------------*/
 #highlight {
+  width: 66.66666%;
   padding: 0;
   background-image: linear-gradient(
       to left top,
@@ -114,6 +119,7 @@
 
 /* Editor's Pick ----------------------------*/
 #editorsPick {
+  width: 33.33333%;
   padding: 6.4rem 3.2rem 3.2rem 3.2rem;
   background-color: var(--color-primary-background);
 }
@@ -125,7 +131,7 @@
 }
 
 #editorsPick-primary .section-img {
-  height: 36.3dvh;
+  height: 32dvh;
 }
 
 #editorsPick-primary .section-img img {
@@ -165,10 +171,6 @@
   display: flex;
 }
 
-#topTopics-list li a > p {
-  font-size: 6rem;
-}
-
 #topTopics-list li a > div {
   width: 3.2rem;
   height: 3.2rem;
@@ -189,9 +191,6 @@
   justify-content: space-between;
 }
 
-#monthlyAwards-content {
-}
-
 .component-card-awards {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
@@ -199,7 +198,7 @@
 }
 
 .component-card-awards > div {
-  min-height: 43.2rem;
+  min-height: 55rem;
 
   background-image: linear-gradient(
       to left top,
@@ -239,7 +238,7 @@
   border-top: solid 0.1rem var(--color-white);
   border-bottom: solid 0.1rem var(--color-white);
   font-weight: 500;
-  letter-spacing: 1.2px;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
   padding: 0.4rem 1.6rem;
 }
@@ -287,8 +286,55 @@
   transform: translate(-50%, -50%);
 }
 
-/* What's Trending ----------------------------*/
+/* Trending Section ----------------------------*/
+#section-trending {
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 1.6rem;
+}
+
+#trending {
+  grid-column: 1 / 4;
+  grid-row: 1 / -1;
+
+  padding-right: 1.6rem;
+  border-right: solid 1px var(--color-gray-light);
+}
+
+#trending-highlight {
+  width: 66.6666%;
+}
+
+#trending-list {
+  width: 33.3333%;
+}
+
+.trending-list-item {
+  padding-bottom: 0.8rem;
+  border-bottom: solid 1px var(--color-gray-light);
+}
+
+.trending-list-item .section-img {
+  width: 30rem;
+}
+
+.trending-list-item .section-img img {
+}
+
+#newsletter {
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
+
 #trending .section-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Stay Connected ----------------------------- */
+#connected .connected-list-item a {
   display: flex;
   justify-content: space-between;
 }
